--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Unlike the other pages, this page uses an extrenally hosted (CDN) verison of thr
     <script src="https://ajax.googleapis.com/ajax/libs/threejs/r84/three.min.js"></script>
   </head>
   <body>
-    <h1>Art 109 Three.js Boilerplate</h1>
+    <h1>Art 109 Three.js Norman Zhao's Boilerplate</h1>
     <h2>
       Overview
     </h2>
@@ -24,7 +24,7 @@ Unlike the other pages, this page uses an extrenally hosted (CDN) verison of thr
       hosted verison of three.js. View the code at:<br />
     </p>
     <p class="mid">
-      <a href="https://github.com/Chelsea-Thompto-Teaching-Examples/threejs-nonode-boilerplate">This GitHub Repo</a>
+      <a href="https://github.com/Normando115/threejs-boilerplate">This GitHub Repo</a>
     </p>
     <br />
     <!--Loading scene script which will place scene here on the page display.-->
